@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!-- $Id$ -->
+
 <dds xmlns="http://www.omg.org/dds"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="http://www.omg.org/dds ../../../docs/schema/dds_qos.xsd">
